syntax = "proto3";

option java_multiple_files = true;

package com.example.grpc;

message CardDetailRequest{
  string id= 1;
}

message CardDetailResponse{
  bool accept = 1;
}

service CardDetailService{
  rpc isAccept(CardDetailRequest) returns (CardDetailResponse);
}